<resources>
    <string name="app_name">MealsMe</string>
    <string name="test">test</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian" />
    <string name="carnivore">Carnivore</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="items">Products</string>
    <string name="calories">Calories</string>
    <string name="description">Description</string>
    <string name="item_name">Item Name</string>
    <string name="submit_button">Submit</string>
    <string name="home">Home Page</string>
    <string name="add_item">Add New Item</string>
    <string name="action_settings">Settings:</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="recommend_me_meals">Recommend me Meals</string>
    <string name="caloriesequals">\"calories: \"</string>
    <string name="name">meal name</string>
    <string name="meal_name">meal name</string>
    <string name="meal_calories">meal calories</string>
    <string name="meal_duration">meal duration</string>
    <string name="meal_is_already_existed">This Meal is already existed!</string>
    <string name="select_items_used_in_this_meal">Select Items used in this meal:</string>
    <string name="meal_duration_in_minutes">Meal Duration in Minutes</string>
    <string name="meal_description">Meal Description</string>
    <string name="select_an_image">Select an Image</string>
    <string name="select_items">Select Items</string>
    <string name="save_new_meal">Save new meal</string>
    <string name="update">update :</string>
    <string name="cancel_button">Cancel</string>
    <string name="add_new_meal">Add New Meal</string>
    <string name="items_selected">Items:</string>
    <string name="status">status:</string>
    <string name="deselect">Deselect</string>
    <string name="meal_already_existed">Meal already existed</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="language_settings">Language</string>
    <string name="update_items">Update Items</string>
    <string name="update_meals">Update Meals</string>
    <string name="change_language">Change Language</string>
    <string name="custom_items_selection">Custom Items selection</string>
    <string name="set_all_items_selected">Set all Items Selected</string>
    <string name="set_all_items_deselected">Set all Items Deselected</string>
    <string name="no_recent_message">No recent Meals to show</string>
    <string name="clear_database">Clear Database</string>
    <string name="clear">Clear</string>
    <string name="change_username">Change Username</string>
    <string name="edit">Edit</string>
    <string name="sort_by">Sort By</string>
    <string name="recently_visited_meals">Recently Visited Meals:</string>
    <string name="vegetables">Vegetables</string>
    <string name="spices">Spices</string>
    <string name="oils">Oils</string>
    <string name="milk">Milk</string>
    <string name="fruits">Fruits</string>
    <string name="seeds">Seeds</string>
    <string name="all">All</string>
    <string name="duration">Duration</string>
    <string name="cold">Cold</string>
    <string name="warm">Warm</string>
    <string name="name_search">Name</string>
    <string name="find_new_meal">Find New Meal</string>
    <string name="minutes_to_prepare">Minutes to prepare</string>
    <string name="Calories_per_100g">Calories per 100g</string>
    <string name="rate_me">Rate Me</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>


    <string-array name="items_types">
        <item name="vegetables">@string/vegetables</item>
        <item name="spices">@string/spices</item>
        <item name="oils">@string/oils</item>
        <item name="milk">@string/milk</item>
        <item name="fruits">@string/fruits</item>
        <item name="seeds">@string/seeds</item>
        <item name="all">@string/all</item>
    </string-array>
    <string-array name="meals_types">
        <item name="duration">@string/duration</item>
        <item name="name">@string/name_search</item>
        <item name="calories">@string/calories</item>
    </string-array>

    <string-array name="rating_stars">
        <item name='one'>@string/one</item>
        <item name='two'>@string/two</item>
        <item name='three'>@string/three</item>
        <item name='four'>@string/four</item>
        <item name='five'>@string/five</item>

    </string-array>
</resources>
