<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/meal_image"
            android:layout_width="176dp"
            android:layout_height="157dp"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/meal_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meal_name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/meal_calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meal_calories"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/meal_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meal_duration"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>